--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Google Homepage</title>
   </head>
   <body>
@@ -32,8 +32,8 @@
           src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
           alt="Google logo"
         />
-        <div id="search-frame">
-          <form action="#">
+        <form action="#">
+          <div class="flex-container" id="search-icons">
             <svg
               focusable="false"
               xmlns="http://www.w3.org/2000/svg"
@@ -44,14 +44,17 @@
                 d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
               ></path>
             </svg>
-            <input type="text" />
             <div id="search-icon-right"></div>
-            <div id="buttons">
-              <button>Google Search</button>
-              <button>I'm Feeling Lucky</button>
-            </div>
-          </form>
-        </div>
+          </div>
+          <div id="search-frame">
+            <label for="search-input">Enter search item</label>
+            <input type="text" id="search-input" />
+          </div>
+          <div id="buttons">
+            <button type="submit">Google Search</button>
+            <button>I'm Feeling Lucky</button>
+          </div>
+        </form>
       </div>
     </main>
     <!-- Footer -->
